Fixing relative links in checks for final run
May have issues with the big catalogues need to change locations to save figures and flags

--- a/dmu4/dmu4_sm_Bootes/generate_holes.ipynb
+++ b/dmu4/dmu4_sm_Bootes/generate_holes.ipynb
@@ -14,11 +14,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This notebook was run with herschelhelp_internal version: \n",
+      "0246c5d (Thu Jan 25 17:01:47 2018 +0000) [with local modifications]\n"
+     ]
+    }
+   ],
    "source": [
     "from herschelhelp_internal import git_version\n",
     "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))"
@@ -26,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -41,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -68,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -114,12 +123,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 35005 GAIA stars in Bootes\n",
+      "Starmask written to data/10_arcsec_holes_Bootes.reg\n"
+     ]
+    }
+   ],
    "source": [
     "starmask.create_holes('../../dmu0/dmu0_GAIA/data/GAIA_{}.fits'.format(field),\n",
     "                      'data/10_arcsec_holes_{}.reg'.format(field),\n",
@@ -136,11 +154,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "\n",
+      "WCSAXES =                    2 / Number of coordinate axes\n",
+      "CRPIX1  =            [astropy.io.fits.card]\n",
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "     0.5 / Pixel coordinate of reference point\n",
+      "CRPIX2  =                0.5 / Pi [astropy.io.fits.card]\n",
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "xel coordinate of reference point\n",
+      "CDELT1  =                0.675 / [deg] Coordin [astropy.io.fits.card]\n",
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "ate increment at reference point\n",
+      "CDELT2  =                0.675 / [deg] Coordina [astropy.io.fits.card]\n",
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "te increment at reference point\n",
+      "RADECSYSa= 'ICRS    '           / International  [astropy.io.fits.card]\n",
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "Celestial Ref. System\n",
+      "CUNIT1  = 'deg     '                / Units of coordinate  [astropy.io.fits.card]\n",
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "increment and value\n",
+      "CUNIT2  = 'deg     '                / Units of coordinate in [astropy.io.fits.card]\n",
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "crement and value\n",
+      "CTYPE1  = 'RA---TAN'           / \n",
+      "CTYPE2  = 'DEC--TAN'         [astropy.io.fits.card]\n",
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "   / \n",
+      "CRVAL1  =                  216.431700722 / [deg] Coordinate value at refer [astropy.io.fits.card]\n",
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "ence point\n",
+      "CRVAL2  =                  32.401081899 / [deg] Coordinate value at r [astropy.io.fits.card]\n",
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "eference point\n",
+      "LONPOLE =                  0.0 / [deg] Native longitude of celest [astropy.io.fits.card]\n",
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "ial pole\n",
+      "LATPOLE = 90.0 / [deg] Native latitude of celestial pole\n",
+      "               [astropy.io.fits.card]\n",
+      "WARNING: FITSFixedWarning:  0.5 / Pixel coordinate of reference point\n",
+      "a floating-point value was expected. [astropy.wcs.wcs]\n",
+      "WARNING: FITSFixedWarning:  / \n",
+      "the RADECSYS keyword is deprecated, use RADESYSa. [astropy.wcs.wcs]\n"
+     ]
+    }
+   ],
    "source": [
     "ORDER=16\n",
     "starmask.reg2moc('data/10_arcsec_holes_{}.reg'.format(field),\n",
@@ -161,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -182,11 +250,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 35005 GAIA stars in Bootes\n",
+      "Starmask written to data/holes_Bootes_irac_i1_20180424.reg\n"
+     ]
+    }
+   ],
    "source": [
     "for pristine_cat in per_catalogue_params:\n",
     "    starmask.create_holes('../../dmu0/dmu0_GAIA/data/GAIA_' + pristine_cat[0] + '.fits',    #GAIA catalogue\n",
@@ -205,11 +282,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "\n",
+      "WCSAXES =                    2 / Number of coordinate axes\n",
+      "CRPIX1  =            [astropy.io.fits.card]\n",
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "     0.5 / Pixel coordinate of reference point\n",
+      "CRPIX2  =                0.5 / Pi [astropy.io.fits.card]\n",
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "xel coordinate of reference point\n",
+      "CDELT1  =                0.675 / [deg] Coordin [astropy.io.fits.card]\n",
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "ate increment at reference point\n",
+      "CDELT2  =                0.675 / [deg] Coordina [astropy.io.fits.card]\n",
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "te increment at reference point\n",
+      "RADECSYSa= 'ICRS    '           / International  [astropy.io.fits.card]\n",
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "Celestial Ref. System\n",
+      "CUNIT1  = 'deg     '                / Units of coordinate  [astropy.io.fits.card]\n",
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "increment and value\n",
+      "CUNIT2  = 'deg     '                / Units of coordinate in [astropy.io.fits.card]\n",
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "crement and value\n",
+      "CTYPE1  = 'RA---TAN'           / \n",
+      "CTYPE2  = 'DEC--TAN'         [astropy.io.fits.card]\n",
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "   / \n",
+      "CRVAL1  =                  216.431700722 / [deg] Coordinate value at refer [astropy.io.fits.card]\n",
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "ence point\n",
+      "CRVAL2  =                  32.401081899 / [deg] Coordinate value at r [astropy.io.fits.card]\n",
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "eference point\n",
+      "LONPOLE =                  0.0 / [deg] Native longitude of celest [astropy.io.fits.card]\n",
+      "WARNING: The following header keyword is invalid or follows an unrecognized non-standard convention:\n",
+      "ial pole\n",
+      "LATPOLE = 90.0 / [deg] Native latitude of celestial pole\n",
+      "               [astropy.io.fits.card]\n",
+      "WARNING: FITSFixedWarning:  0.5 / Pixel coordinate of reference point\n",
+      "a floating-point value was expected. [astropy.wcs.wcs]\n",
+      "WARNING: FITSFixedWarning:  / \n",
+      "the RADECSYS keyword is deprecated, use RADESYSa. [astropy.wcs.wcs]\n"
+     ]
+    }
+   ],
    "source": [
     "ORDER=16\n",
     "for pristine_cat in per_catalogue_params:\n",
