--- a/dmu6/dmu6_v_AKARI-NEP/help_akari-nep_checks.ipynb
+++ b/dmu6/dmu6_v_AKARI-NEP/help_akari-nep_checks.ipynb
@@ -32,9 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -48,7 +46,7 @@
    "source": [
     "t0 = time.time()\n",
     "\n",
-    "catname = \"/data/help/master_catalogue_akari-nep_20180205.fits\"\n",
+    "catname = \"../../dmu1/dmu1_ml_AKARI-NEP/data/master_catalogue_akari-nep_20180215.fits\"\n",
     "master_catalogue = Table.read(catname)\n",
     "\n",
     "print('Elapsed time(secs): ', time.time() - t0)\n",
@@ -59,9 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -80,9 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -218,9 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -628,9 +620,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def flag_mag(mask, x1, y1, x2, y2, mask2=None, x3=None, y3=None, mask3=None,\n",
@@ -716,9 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -858,9 +846,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -931,9 +917,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def outliers(x, y, xerr, yerr, labels=[\"x\", \"y\"], savefig=False):\n",
@@ -1061,9 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1329,9 +1311,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for band_of_a_kind in all_bands:\n",
@@ -1356,7 +1336,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python_(herschelhelp_internal)",
+   "display_name": "Python (herschelhelp_internal)",
    "language": "python",
    "name": "helpint"
   },
@@ -1370,7 +1350,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
