--- a/dmu6/dmu6_v_SGP/4_flags_sgp.ipynb
+++ b/dmu6/dmu6_v_SGP/4_flags_sgp.ipynb
@@ -27,7 +27,7 @@
    },
    "outputs": [],
    "source": [
-    "catname = \"master_catalogue_sgp_20180124.fits\"\n",
+    "catname = \"../../dmu1/dmu1_ml_SGP/data/master_catalogue_sgp_20180221.fits\"\n",
     "master_catalogue = Table.read(catname)"
    ]
   },
@@ -238,7 +238,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python_(herschelhelp_internal)",
+   "display_name": "Python (herschelhelp_internal)",
    "language": "python",
    "name": "helpint"
   },
@@ -252,7 +252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
