--- a/dmu6/dmu6_v_SPIRE-NEP/4_flags_spire-nep.ipynb
+++ b/dmu6/dmu6_v_SPIRE-NEP/4_flags_spire-nep.ipynb
@@ -27,7 +27,7 @@
    },
    "outputs": [],
    "source": [
-    "catname = \"master_catalogue_spire-nep_20171122.fits\"\n",
+    "catname = \"../../dmu1/dmu1_ml_SPIRE-NEP/data/master_catalogue_spire-nep_20180220.fits\"\n",
     "master_catalogue = Table.read(catname)"
    ]
   },
@@ -126,7 +126,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python_(herschelhelp_internal)",
+   "display_name": "Python (herschelhelp_internal)",
    "language": "python",
    "name": "helpint"
   },
@@ -140,7 +140,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
