--- a/dmu6/dmu6_v_SPIRE-NEP/help_spire-nep_checks.ipynb
+++ b/dmu6/dmu6_v_SPIRE-NEP/help_spire-nep_checks.ipynb
@@ -32,9 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -48,7 +46,7 @@
    "source": [
     "t0 = time.time()\n",
     "\n",
-    "catname = \"/data/help/master_catalogue_spire-nep_20171122.fits\"\n",
+    "catname = \"../../dmu1/dmu1_ml_SPIRE-NEP/data/master_catalogue_spire-nep_20180220.fits\"\n",
     "master_catalogue = Table.read(catname)\n",
     "\n",
     "print('Elapsed time(secs): ', time.time() - t0)\n",
@@ -59,9 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -80,9 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -105,9 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "u_bands = []\n",
@@ -200,9 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -469,9 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -638,9 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def outliers(x, y, xerr, yerr, labels=[\"x\", \"y\"], savefig=False):\n",
@@ -768,9 +754,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for band_of_a_kind in all_bands:\n",
@@ -902,9 +886,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for band_of_a_kind in all_bands:\n",
@@ -930,7 +912,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python_(herschelhelp_internal)",
+   "display_name": "Python (herschelhelp_internal)",
    "language": "python",
    "name": "helpint"
   },
@@ -944,7 +926,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
