--- a/dmu6/dmu6_v_COSMOS/4_flags_cosmos.ipynb
+++ b/dmu6/dmu6_v_COSMOS/4_flags_cosmos.ipynb
@@ -27,7 +27,7 @@
    },
    "outputs": [],
    "source": [
-    "catname = \"master_catalogue_cosmos_20180207.fits\"\n",
+    "catname = \"../../dmu1/dmu1_ml_COSMOS/data/master_catalogue_cosmos_20180313.fits\"\n",
     "master_catalogue = Table.read(catname)"
    ]
   },
@@ -273,7 +273,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python_(herschelhelp_internal)",
+   "display_name": "Python (herschelhelp_internal)",
    "language": "python",
    "name": "helpint"
   },
@@ -287,7 +287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
