--- a/dmu6/dmu6_v_EGS/4_flags_egs.ipynb
+++ b/dmu6/dmu6_v_EGS/4_flags_egs.ipynb
@@ -27,7 +27,7 @@
    },
    "outputs": [],
    "source": [
-    "catname = \"master_catalogue_egs_20180207.fits\"\n",
+    "catname = \"../../dmu1/dmu1_ml_EGS/data/master_catalogue_egs_20180406.fits\"\n",
     "master_catalogue = Table.read(catname)"
    ]
   },
@@ -293,7 +293,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python_(herschelhelp_internal)",
+   "display_name": "Python (herschelhelp_internal)",
    "language": "python",
    "name": "helpint"
   },
@@ -307,7 +307,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
