--- a/dmu6/dmu6_v_ELAIS-S1/4_flags_elais-s1.ipynb
+++ b/dmu6/dmu6_v_ELAIS-S1/4_flags_elais-s1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ELAIS-N1 master catalogue: Flags"
+    "# ELAIS-S1 master catalogue: Flags"
    ]
   },
   {
@@ -27,7 +27,7 @@
    },
    "outputs": [],
    "source": [
-    "catname = \"master_catalogue_elais-s1_20180122.fits\"\n",
+    "catname = \"../../dmu1/dmu1_ml_ELAIS-S1/data/master_catalogue_elais-s1_20180416.fits\"\n",
     "master_catalogue = Table.read(catname)"
    ]
   },
@@ -230,7 +230,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python_(herschelhelp_internal)",
+   "display_name": "Python (herschelhelp_internal)",
    "language": "python",
    "name": "helpint"
   },
@@ -244,7 +244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
