--- a/dmu6/dmu6_v_HDF-N/4_flags_hdf-n.ipynb
+++ b/dmu6/dmu6_v_HDF-N/4_flags_hdf-n.ipynb
@@ -27,7 +27,7 @@
    },
    "outputs": [],
    "source": [
-    "catname = \"master_catalogue_hdf-n_20180201.fits\"\n",
+    "catname = \"../../dmu1/dmu1_ml_HDF-N/data/master_catalogue_hdf-n_20180219.fits\"\n",
     "master_catalogue = Table.read(catname)"
    ]
   },
@@ -237,7 +237,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python_(herschelhelp_internal)",
+   "display_name": "Python (herschelhelp_internal)",
    "language": "python",
    "name": "helpint"
   },
@@ -251,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
