--- a/dmu6/dmu6_v_Lockman-SWIRE/4_flags_lockman-swire.ipynb
+++ b/dmu6/dmu6_v_Lockman-SWIRE/4_flags_lockman-swire.ipynb
@@ -27,7 +27,7 @@
    },
    "outputs": [],
    "source": [
-    "catname = \"master_catalogue_lockman-swire_20171201.fits\"\n",
+    "catname = \"../../dmu1/dmu1_ml_Lockman-SWIRE/data/master_catalogue_lockman-swire_20180219.fits\"\n",
     "master_catalogue = Table.read(catname)"
    ]
   },
@@ -270,7 +270,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python_(herschelhelp_internal)",
+   "display_name": "Python (herschelhelp_internal)",
    "language": "python",
    "name": "helpint"
   },
@@ -284,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
