--- a/dmu6/dmu6_v_NGP/4_flags_ngp.ipynb
+++ b/dmu6/dmu6_v_NGP/4_flags_ngp.ipynb
@@ -27,7 +27,7 @@
    },
    "outputs": [],
    "source": [
-    "catname = \"master_catalogue_ngp_20171207.fits\"\n",
+    "catname = \"../../dmu1/dmu1_ml_NGP/data/master_catalogue_ngp_20180219.fits\"\n",
     "master_catalogue = Table.read(catname)"
    ]
   },
@@ -269,7 +269,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python_(herschelhelp_internal)",
+   "display_name": "Python (herschelhelp_internal)",
    "language": "python",
    "name": "helpint"
   },
@@ -283,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
