--- a/dmu6/dmu6_v_SA13/help_sa13_checks.ipynb
+++ b/dmu6/dmu6_v_SA13/help_sa13_checks.ipynb
@@ -32,9 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -48,7 +46,7 @@
    "source": [
     "t0 = time.time()\n",
     "\n",
-    "catname = \"/data/help/master_catalogue_sa13_20180201.fits\"\n",
+    "catname = \"../../dmu1/dmu1_ml_SA13/data/master_catalogue_sa13_20180219.fits\"\n",
     "master_catalogue = Table.read(catname)\n",
     "\n",
     "print('Elapsed time(secs): ', time.time() - t0)\n",
@@ -59,9 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -80,9 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -105,9 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "u_bands = []\n",
@@ -200,9 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -471,9 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def outliers(x, y, xerr, yerr, labels=[\"x\", \"y\"], savefig=False):\n",
@@ -601,9 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for band_of_a_kind in all_bands:\n",
@@ -735,9 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for band_of_a_kind in all_bands:\n",
@@ -763,7 +747,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python_(herschelhelp_internal)",
+   "display_name": "Python (herschelhelp_internal)",
    "language": "python",
    "name": "helpint"
   },
@@ -777,7 +761,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
