--- a/dmu6/dmu6_v_XMM-13hr/help_xmm13h_checks.ipynb
+++ b/dmu6/dmu6_v_XMM-13hr/help_xmm13h_checks.ipynb
@@ -32,9 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -48,7 +46,7 @@
    "source": [
     "t0 = time.time()\n",
     "\n",
-    "catname = \"/data/help/master_catalogue_xmm-13hr_20180201.fits\"\n",
+    "catname = \"../../dmu1/dmu1_ml_XMM-13hr/data/master_catalogue_xmm-13hr_20180221.fits\"\n",
     "master_catalogue = Table.read(catname)\n",
     "\n",
     "print('Elapsed time(secs): ', time.time() - t0)\n",
@@ -59,9 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -80,9 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -200,9 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -376,9 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def outliers(x, y, xerr, yerr, labels=[\"x\", \"y\"], savefig=False):\n",
@@ -506,9 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for band_of_a_kind in all_bands:\n",
@@ -640,9 +628,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for band_of_a_kind in all_bands:\n",
@@ -668,7 +654,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python_(herschelhelp_internal)",
+   "display_name": "Python (herschelhelp_internal)",
    "language": "python",
    "name": "helpint"
   },
@@ -682,7 +668,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
