--- a/dmu6/dmu6_v_XMM-LSS/4_flags_xmm-lss.ipynb
+++ b/dmu6/dmu6_v_XMM-LSS/4_flags_xmm-lss.ipynb
@@ -27,7 +27,7 @@
    },
    "outputs": [],
    "source": [
-    "catname = \"master_catalogue_xmm-lss_20180221.fits\"\n",
+    "catname = \"../../dmu1/dmu1_ml_XMM-LSS/data/master_catalogue_xmm-lss_20180221.fits\"\n",
     "master_catalogue = Table.read(catname)"
    ]
   },
@@ -272,7 +272,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python_(herschelhelp_internal)",
+   "display_name": "Python (herschelhelp_internal)",
    "language": "python",
    "name": "helpint"
   },
@@ -286,7 +286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
