--- a/dmu6/dmu6_v_xFLS/4_flags_xfls.ipynb
+++ b/dmu6/dmu6_v_xFLS/4_flags_xfls.ipynb
@@ -27,7 +27,7 @@
    },
    "outputs": [],
    "source": [
-    "catname = \"master_catalogue_xfls_20171201.fits\"\n",
+    "catname = \"../../dmu1/dmu1_ml_xFLS/data/master_catalogue_xfls_20180221.fits\"\n",
     "master_catalogue = Table.read(catname)"
    ]
   },
@@ -267,7 +267,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python_(herschelhelp_internal)",
+   "display_name": "Python (herschelhelp_internal)",
    "language": "python",
    "name": "helpint"
   },
@@ -281,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
