test relative links

--- a/dmu6/dmu6_v_AKARI-NEP/help_akari-nep_checks.ipynb
+++ b/dmu6/dmu6_v_AKARI-NEP/help_akari-nep_checks.ipynb
@@ -204,7 +204,7 @@
     "    if savefig:\n",
     "        survey_label = ((x_label.replace(\" \", \"_\")).replace(\"(\", \"\")).replace(\")\", \"\")\n",
     "        figname = field + \"_magVSmagerr_\" + survey_label + \".png\"\n",
-    "        plt.savefig(\"/data/help/plots/\" + figname, bbox_inches='tight')\n",
+    "        plt.savefig(\"./data/\" + figname, bbox_inches='tight')\n",
     "    #plt.show()\n",
     "        "
    ]
@@ -620,7 +620,9 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def flag_mag(mask, x1, y1, x2, y2, mask2=None, x3=None, y3=None, mask3=None,\n",
@@ -690,7 +692,7 @@
     "            figname = field + \"_decamIssues_\" + survey_label + \".png\"\n",
     "        elif \"IRAC\" in labels1[0]:\n",
     "            figname = field + \"_iracIssues_i1_i2.png\"\n",
-    "        plt.savefig(\"/data/help/plots/\" + figname, bbox_inches='tight')\n",
+    "        plt.savefig(\"./data/\" + figname, bbox_inches='tight')\n",
     "        \n",
     "    display(fig)\n",
     "    plt.close()"
@@ -917,7 +919,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def outliers(x, y, xerr, yerr, labels=[\"x\", \"y\"], savefig=False):\n",
@@ -1035,7 +1039,7 @@
     "    if savefig:\n",
     "        survey_label = ((diff_label.replace(\" \", \"_\")).replace(\"(\", \"\")).replace(\")\", \"\")\n",
     "        figname = field + \"_outliers_\" + survey_label + \".png\"\n",
-    "        plt.savefig(\"/data/help/plots/\" + figname, bbox_inches='tight')\n",
+    "        plt.savefig(\"./data/\" + figname, bbox_inches='tight')\n",
     "\n",
     "\n",
     "    display(fig)\n",
@@ -1301,7 +1305,7 @@
     "    if savefig:\n",
     "        survey_label = ((diff_label.replace(\" \", \"_\")).replace(\"(\", \"\")).replace(\")\", \"\")\n",
     "        figname = field + \"_apcorrIssues_\" + survey_label + \".png\"\n",
-    "        plt.savefig(\"/data/help/plots/\" + figname, bbox_inches='tight')\n",
+    "        plt.savefig(\"./data/\" + figname, bbox_inches='tight')\n",
     "\n",
     "\n",
     "    display(fig)\n",
@@ -1311,7 +1315,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for band_of_a_kind in all_bands:\n",
