--- a/dmu1/dmu1_ml_XMM-13hr/1.1_LegacySurvey.ipynb
+++ b/dmu1/dmu1_ml_XMM-13hr/1.1_LegacySurvey.ipynb
@@ -595,6 +595,8 @@
     "        if 'ap' in col:\n",
     "            mag += mag_corr[col[-1]]\n",
     "            catalogue[col],catalogue[errcol] = mag_to_flux(mag,magerror)\n",
+    "            catalogue[col] = catalogue[col] * 1.e6\n",
+    "            catalogue[errcol] = catalogue[errcol] * 1.e6\n",
     "        \n",
     "        # Add magnitudes\n",
     "        catalogue.add_column(Column(mag , name=\"m{}\".format(col[1:])))\n",
@@ -910,7 +912,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
