Fix Bootes ap correct

--- a/dmu1/dmu1_ml_Bootes/1.4_LegacySurvey.ipynb
+++ b/dmu1/dmu1_ml_Bootes/1.4_LegacySurvey.ipynb
@@ -241,7 +241,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will use magnitudes between 17.0 and 18.5"
+    "We will use magnitudes between 15.5 and 17.0"
    ]
   },
   {
@@ -265,7 +265,7 @@
     "mag_corr['g'], num, std = aperture_correction(\n",
     "    magnitudes['g'][4], magnitudes['g'][5], \n",
     "    stellarities['g'],\n",
-    "    mag_min=17.0, mag_max=18.5)\n",
+    "    mag_min=15.5, mag_max=17.0)\n",
     "print(\"Aperture correction for g band:\")\n",
     "print(\"Correction: {}\".format(mag_corr['g']))\n",
     "print(\"Number of source used: {}\".format(num))\n",
@@ -332,7 +332,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We use magnitudes between 17.0 and 18.5."
+    "We use magnitudes between 15.0 and 17.0."
    ]
   },
   {
@@ -356,7 +356,7 @@
     "mag_corr['r'], num, std = aperture_correction(\n",
     "    magnitudes['r'][4], magnitudes['r'][5], \n",
     "    stellarities['r'],\n",
-    "    mag_min=17.0, mag_max=18.5)\n",
+    "    mag_min=15.0, mag_max=17.0)\n",
     "print(\"Aperture correction for r band:\")\n",
     "print(\"Correction: {}\".format(mag_corr['r']))\n",
     "print(\"Number of source used: {}\".format(num))\n",
@@ -394,7 +394,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will use aperture 4 as target."
+    "We will use aperture 4 as target. Since this is the same as the used aperture this yields no correction."
    ]
   },
   {
